# phevctl

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TODO.md  decode.c  main.c  out.txt
.github/workflows/: ci.yml  docker.yml
include/: phev_config.h  phev_controller.h  phev_core.h  phev_pipe.h  phev_register.h  phev_response_handler.h  phevargs.h
src/: decode.c  main.c  phev_config.c  phev_controller.c  phev_core.c  phev_pipe.c  phev_register.c  phev_response_handler.c  phevargs.c
test/: CMakeLists.txt  test_phev_args.c  test_phev_config.c  test_phev_controller.c  test_phev_core.c  test_phev_pipe.c  test_phev_register.c  test_phev_response_handler.c  test_phev_store.c  test_runner.c  tests.h
